Say who should enforcement mechanism. (#433)
SHA: 04a4ed7e3a4ad29aa24587f847008e0fa9853fa6
Reason: push, by jyasskin

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1544,7 +1544,7 @@ the success of advertising campaigns. Even this small amount of information is s
 constraints or other considerations. In time, we expect to see more specialized
 privacy principles published, for more specific <a data-link-type="dfn|abstract-op" href="#dfn-context" class="internalDFN" id="ref-for-dfn-context-8">contexts</a> on the web.</p>
 <p>These principles should be enforced by <a data-link-type="dfn|abstract-op" data-type="dfn" href="https://infra.spec.whatwg.org/#user-agent">user agents</a>. When this is not possible,
-additional enforcement mechanisms are needed.</p>
+we encourage other entities to find ways to enforce them.</p>
 <section id="identity-on-the-web"><div class="header-wrapper"><h3 id="identity"><bdi class="secno">2.1 </bdi>Identity on the Web</h3><a class="self-link" href="#identity" aria-label="Permalink for Section 2.1"></a></div><div class="practice principle" data-audiences="user-agents"><a class="marker self-link" href="#principle-identity-per-context"><bdi lang="en">Principle 2.1</bdi></a>: <span class="practicelab" id="principle-identity-per-context">A <a data-link-type="dfn|abstract-op" data-type="dfn" href="https://infra.spec.whatwg.org/#user-agent">user agent</a>
 should help its user present the <a data-link-type="dfn|abstract-op" href="#dfn-identity" class="internalDFN" id="ref-for-dfn-identity-2">identity</a> they want in each <a data-link-type="dfn|abstract-op" href="#dfn-context" class="internalDFN" id="ref-for-dfn-context-9">context</a>
 they are in, and should prevent or support <a data-link-type="dfn|abstract-op" href="#dfn-recognize" class="internalDFN" id="ref-for-dfn-recognize-3">recognition</a> as appropriate.
