--- a/index.html
+++ b/index.html
@@ -2147,7 +2147,9 @@ information, or public information about misbehaving <a data-link-type="dfn|abst
 
 <p>Features that are designed-for-purpose facilitate these principles by providing functionality that is only or primarily
 useful for a particular purpose. Designed-for-purpose features make it easier to explain the purpose to people, and may
-also limit the feasible secondary uses of data.</p>
+also limit the feasible secondary uses of data. When building a designed-for-purpose feature,
+<a href="https://www.w3.org/TR/design-principles/#high-level-low-level">consider tradeoffs between high and low-level
+APIs</a>.</p>
 <p><a data-link-type="dfn|abstract-op" href="#dfn-controlled-de-identified-data" class="internalDFN" id="ref-for-dfn-controlled-de-identified-data-6">Controlled de-identified data</a> may be used for additional purposes in ways that are compatible with the specified
 purpose.</p>
 </section><section id="transparency-0"><div class="header-wrapper"><h3 id="transparency"><bdi class="secno">2.11 </bdi>Transparency</h3><a class="self-link" href="#transparency" aria-label="Permalink for Section 2.11"></a></div><div class="practice principle" data-audiences="websites user-agents"><a class="marker self-link" href="#transparency-when-requested"><bdi lang="en">Principle 2.11.1</bdi></a>: <span class="practicelab" id="transparency-when-requested">
