--- a/index.html
+++ b/index.html
@@ -1984,7 +1984,7 @@ important mitigation for <a>browser fingerprinting</a>.
   <span class="practicelab" id="principle-consent-user-preference">
     When any [=actor=] obtains [=consent=] for processing from a [=person=], the
     actor should design the consent request so as to learn the person's intent to
-    consent or not, and not to bias the choice.
+    consent or not, and not to maximize the processing consented to.
   </span>
 </p>
 </div>
