--- a/index.html
+++ b/index.html
@@ -1309,7 +1309,7 @@ the data exposed, is to autogenerate a new email address for each context.
 
 ### Ancillary uses
 
-[=Sites=] sometimes use data in ways that aren't needed for the user's immediate
+[=Sites=] sometimes use data in ways that aren't directly needed for the user's immediate
 goals. For example, they might bill advertisers, measure site performance, or
 tell developers about bugs. These uses are known as <dfn data-lt="ancillary
 use">ancillary uses</dfn>.
