Remove remaining uses of [ETHICAL-WEB].
And use data-cite instead of a plain link.

--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@ This document is considered stable by the TAG and is ready for wide review.
 
 ## How This Document Fits In
 
-This document elaborates on the [privacy principle](https://www.w3.org/TR/ethical-web-principles/#privacy)
+This document elaborates on the <a data-cite="ethical-web-principles#privacy">privacy principle</a>
 from the [[[ethical-web-principles]]]: "Security and privacy are essential." While it focuses on privacy, this should
 not be taken as an indication that privacy is always more important than other ethical web principles, and
 this document doesn't address how to balance the different ethical web principles if they come into conflict.
@@ -625,7 +625,7 @@ is specifically about [=privacy=] as it applies to the web, it focuses on privac
 information flows.
 
 The web is for everyone ([[?For-Everyone]]). It should be "<i>a platform that helps people and provides a
-net positive social benefit</i>" ([[?ETHICAL-WEB]]). One of the ways in which the
+net positive social benefit</i>" ([[?ethical-web-principles]]). One of the ways in which the
 web serves people is by seeking to protect them from surveillance and the types of manipulation that data can
 enable.
 
@@ -666,7 +666,7 @@ evaluating a privacy situation is best done by clearly identifying:
 There are <em>always</em> privacy principles at work. Some sets of principles may be more
 permissive, but that does not make them neutral. All privacy principles have an impact on
 [=people=] and we must therefore determine which principles best align with ethical web values in
-web [=contexts=] ([[?ETHICAL-WEB]], [[?Why-Privacy]]).
+web [=contexts=] ([[?ethical-web-principles]], [[?Why-Privacy]]).
 
 <dfn>Information flows</dfn> are information exchanged or processed by
 [=actors=]. A person's privacy can be harmed both by their information flowing from them to
