Remove the local biblio for GPC, and use [[[]]] to link its name.

--- a/index.html
+++ b/index.html
@@ -257,12 +257,6 @@
           href: 'https://www.cambridge.org/core/books/governing-privacy-in-knowledge-commons/FA569455669E2CECA25DF0244C62C1A1',
           publisher: 'Cambridge University Press',
         },
-        'GPC': {
-          title: 'Global Privacy Control (GPC)',
-          authors: [ 'Sebastian Zimmeck', 'Peter Snyder', 'Justin Brookman', 'Aram Zucker-Scharff' ],
-          href: 'https://privacycg.github.io/gpc-spec/',
-          publisher: 'W3C',
-        },
         'IAD': {
           title: 'Understanding Institutional Diversity',
           authors: ['Elinor Ostrom'],
@@ -749,8 +743,8 @@ the [=person=]'s rights) with every interaction that the [=person=] has with a s
 instance, the [=person=] may be objecting to [=processing=] based on legitimate interest,
 withdrawing [=consent=] to specific [=purposes=], or requesting that their data not be sold or
 shared.) The [=user=] is effectively delegating the expression of their [=opt-out=] to their
-[=user agent=], which helps rectify [=automation asymmetry=]. The <em>Global Privacy
-Control</em> [[?GPC]] is a good example of a [=global opt-out=] mechanism.
+[=user agent=], which helps rectify [=automation asymmetry=]. The [[[?gpc-spec]]] is a good
+example of a [=global opt-out=] mechanism.
 
 Under this model, a [=global opt-out=] signal should not be understood as a decision that a
 [=person=] made a while ago when they flipped a setting or chose to use a specific
