mark de-identification principal as applying to API designers, fixes w3ctag/privacy-principles#445

--- a/index.html
+++ b/index.html
@@ -1646,7 +1646,7 @@ rights by people over data about themselves are inherent to [=autonomy=].
 
 ## De-identified Data {#deidentified-data}
 
-<div class="practice" data-audiences="websites">
+<div class="practice" data-audiences="websites user-agents api-designers">
 
 <p>
   <span class="practicelab" id="de-identify-data">
