mark de-identification principal as applying to API designers, fixes w3ctag/privacy-principles#445 (#446)
SHA: f55a2aef387ded9996020daec194933388bf9283
Reason: push, by pes10k

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@ needs.
     <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-5">data</a>.
   </span><span class="audience-label"><span class="audience-websites">websites</span><span class="audience-user-agents">user agents</span><span class="audience-api-designers">API designers</span></span></li><li><a class="marker self-link" href="#de-identify-data"><bdi lang="en">Principle 2.6</bdi></a>: <span class="practicelab">
     Whenever possible, processors should work with <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-6">data</a> that has been <a data-link-type="dfn|abstract-op" href="#dfn-de-identify" class="internalDFN" id="ref-for-dfn-de-identify-1">de-identified</a>.
-  </span><span class="audience-label"><span class="audience-websites">websites</span></span></li><li><a class="marker self-link" href="#principle-collective-privacy"><bdi lang="en">Principle 2.7</bdi></a>: <span class="practicelab">
+  </span><span class="audience-label"><span class="audience-websites">websites</span><span class="audience-user-agents">user agents</span><span class="audience-api-designers">API designers</span></span></li><li><a class="marker self-link" href="#principle-collective-privacy"><bdi lang="en">Principle 2.7</bdi></a>: <span class="practicelab">
     Groups and institutions should support autonomy by making
     decisions collectively to either prevent or enable data
     sharing, and to set defaults for data processing rules.
@@ -1905,13 +1905,13 @@ themselves. Data rights mean that a person needs to have ongoing control, not ju
 <p>The OECD Privacy Principles [<cite><a class="bibref" data-link-type="biblio" href="#bib-oecd-guidelines" title="OECD Guidelines on the Protection of Privacy and Transborder Flows of Personal Data">OECD-Guidelines</a></cite>], [<cite><a class="bibref" data-link-type="biblio" href="#bib-records-computers-rights" title="Records, Computers and the Rights of Citizens">Records-Computers-Rights</a></cite>], and the [<cite><a class="bibref" data-link-type="biblio" href="#bib-gdpr" title="General Data Protection Regulations (GDPR) / Regulation (EU) 2016/679">GDPR</a></cite>],
 among other places, describe many of the rights <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-84">people</a> have as data subjects. These participatory
 rights by people over data about themselves are inherent to <a data-link-type="dfn|abstract-op" href="#dfn-autonomous" class="internalDFN" id="ref-for-dfn-autonomous-10">autonomy</a>.</p>
-</section><section id="de-identified-data"><div class="header-wrapper"><h3 id="deidentified-data"><bdi class="secno">2.6 </bdi>De-identified Data</h3><a class="self-link" href="#deidentified-data" aria-label="Permalink for Section 2.6"></a></div><div class="practice principle" data-audiences="websites"><a class="marker self-link" href="#de-identify-data"><bdi lang="en">Principle 2.6</bdi></a>: <span class="practicelab" id="de-identify-data">
+</section><section id="de-identified-data"><div class="header-wrapper"><h3 id="deidentified-data"><bdi class="secno">2.6 </bdi>De-identified Data</h3><a class="self-link" href="#deidentified-data" aria-label="Permalink for Section 2.6"></a></div><div class="practice principle" data-audiences="websites user-agents api-designers"><a class="marker self-link" href="#de-identify-data"><bdi lang="en">Principle 2.6</bdi></a>: <span class="practicelab" id="de-identify-data">
     Whenever possible, processors should work with <a data-link-type="dfn|abstract-op" href="#dfn-data" class="internalDFN" id="ref-for-dfn-data-45">data</a> that has been <a data-link-type="dfn|abstract-op" href="#dfn-de-identify" class="internalDFN" id="ref-for-dfn-de-identify-4">de-identified</a>.
   </span>
 
 
 
-<div class="audience-label"><span class="audience-websites">websites</span></div></div>
+<div class="audience-label"><span class="audience-websites">websites</span><span class="audience-user-agents">user agents</span><span class="audience-api-designers">API designers</span></div></div>
 
 <p>Data is <dfn data-lt="de-identify|de-identification|de-identified" id="dfn-de-identify" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">de-identified</dfn> when there exists a high level of confidence
 that no <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-85">person</a> described by the data can be identified, directly or indirectly
