Avoid "true intent" term. (#432)

--- a/index.html
+++ b/index.html
@@ -1983,8 +1983,8 @@ important mitigation for <a>browser fingerprinting</a>.
 <p>
   <span class="practicelab" id="principle-consent-user-preference">
     When any [=actor=] obtains [=consent=] for processing from a [=person=], the
-    actor should design the consent request so as to learn the person's true
-    intent to consent or not, and not to maximize the processing consented to.
+    actor should design the consent request so as to learn the person's intent to
+    consent or not, and not to maximize the processing consented to.
   </span>
 </p>
 </div>
