Say regulations aren't a privacy ceiling.
Co-authored-by: Wendy Seltzer <wendy+gh@seltzer.org>

--- a/index.html
+++ b/index.html
@@ -1607,7 +1607,7 @@ Data is <dfn data-lt="de-identify|de-identification">de-identified</dfn> when th
 that no [=person=] described by the data can be identified, directly or indirectly
 (e.g. via association with an [=identifier=], user agent, or device), by that data alone or in
 combination with other available information. Many local regulations define their own requirements
-for data to be considered [=de-identified=]. Note
+for data to be considered [=de-identified=]. Such regulations should not be read as a privacy ceiling. Note
 that further considerations relating to groups are covered in the
 <a href="#collective">Collective Issues in Privacy</a> section.
 
