Mention local regulations in de-identified data section. (#441)
SHA: 6decb4135adc764e84f189834a5ff04be1a05c04
Reason: push, by jyasskin

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1916,7 +1916,8 @@ rights by people over data about themselves are inherent to <a data-link-type="d
 <p>Data is <dfn data-lt="de-identify|de-identification|de-identified" id="dfn-de-identify" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">de-identified</dfn> when there exists a high level of confidence
 that no <a data-link-type="dfn|abstract-op" href="#dfn-individual" class="internalDFN" id="ref-for-dfn-individual-85">person</a> described by the data can be identified, directly or indirectly
 (e.g. via association with an <a data-link-type="dfn|abstract-op" href="#dfn-identifier" class="internalDFN" id="ref-for-dfn-identifier-4">identifier</a>, user agent, or device), by that data alone or in
-combination with other available information. Note
+combination with other available information. Many local regulations define their own requirements
+for data to be considered <a data-link-type="dfn|abstract-op" href="#dfn-de-identify" class="internalDFN" id="ref-for-dfn-de-identify-5">de-identified</a>. Such regulations should not be read as a privacy ceiling. Note
 that further considerations relating to groups are covered in the
 <a href="#collective">Collective Issues in Privacy</a> section.</p>
 <p>We talk of <dfn id="dfn-controlled-de-identified-data" tabindex="0" aria-haspopup="dialog" data-dfn-type="dfn">controlled de-identified data</dfn> when:</p>
@@ -2471,7 +2472,7 @@ detailed by the directing <a data-link-type="dfn|abstract-op" href="#dfn-actor" 
 <li>may determine implementation details of the data processing in question but
 does not determine the <a data-link-type="dfn|abstract-op" href="#dfn-purpose" class="internalDFN" id="ref-for-dfn-purpose-15">purpose</a> for which the data is being <a data-link-type="dfn|abstract-op" href="#dfn-process" class="internalDFN" id="ref-for-dfn-process-38">processed</a>
 nor the overarching <a data-link-type="dfn|abstract-op" href="#dfn-means" class="internalDFN" id="ref-for-dfn-means-5">means</a> through which the <a data-link-type="dfn|abstract-op" href="#dfn-purpose" class="internalDFN" id="ref-for-dfn-purpose-16">purpose</a> is carried out;</li>
-<li>has no independent right to use the data other than in a <a data-link-type="dfn|abstract-op" href="#dfn-de-identify" class="internalDFN" id="ref-for-dfn-de-identify-5">de-identified</a> form (e.g., for
+<li>has no independent right to use the data other than in a <a data-link-type="dfn|abstract-op" href="#dfn-de-identify" class="internalDFN" id="ref-for-dfn-de-identify-6">de-identified</a> form (e.g., for
 monitoring service integrity, load balancing, capacity planning, or billing); and,</li>
 <li>has a contract in place with the <a data-link-type="dfn|abstract-op" href="#dfn-actor" class="internalDFN" id="ref-for-dfn-actor-77">actor</a> which is consistent with the above limitations.</li>
 </ul>
@@ -3165,9 +3166,9 @@ Wendy Seltzer.</p>
     </li><li>
       <a href="#ref-for-dfn-de-identify-3" title="§ 2.2.1.1 Designing ancillary APIs that provide new information">§ 2.2.1.1 Designing ancillary APIs that provide new information</a> 
     </li><li>
-      <a href="#ref-for-dfn-de-identify-4" title="§ 2.6 De-identified Data">§ 2.6 De-identified Data</a> 
+      <a href="#ref-for-dfn-de-identify-4" title="§ 2.6 De-identified Data">§ 2.6 De-identified Data</a> <a href="#ref-for-dfn-de-identify-5" title="Reference 2">(2)</a> 
     </li><li>
-      <a href="#ref-for-dfn-de-identify-5" title="§ A.4 Acting on Data">§ A.4 Acting on Data</a> 
+      <a href="#ref-for-dfn-de-identify-6" title="§ A.4 Acting on Data">§ A.4 Acting on Data</a> 
     </li>
   </ul>
     </div><div class="dfn-panel" hidden="" role="dialog" aria-modal="true" id="dfn-panel-for-dfn-controlled-de-identified-data" aria-label="Links in this document to definition: controlled de-identified data">
