Avoid the "ceiling" metaphor for privacy protections.

--- a/index.html
+++ b/index.html
@@ -1654,8 +1654,9 @@ rights by people over data about themselves are inherent to [=autonomy=].
 Data is <dfn data-lt="de-identify|de-identification">de-identified</dfn> when there exists a high level of confidence
 that no [=person=] described by the data can be identified, directly or indirectly
 (e.g. via association with an [=identifier=], user agent, or device), by that data alone or in
-combination with other available information. Many local regulations define their own requirements
-for data to be considered [=de-identified=]. Such regulations should not be read as a privacy ceiling. Note
+combination with other available information. Many local regulations define additional requirements
+for data to be considered [=de-identified=], but those requirements should not be treated as a maximum
+degree of privacy protection. Note
 that further considerations relating to groups are covered in the
 <a href="#collective">Collective Issues in Privacy</a> section.
 
