Remove obsolete parts of the SOTD. In particular that this is only a Draft finding.

--- a/index.html
+++ b/index.html
@@ -576,15 +576,9 @@ document is written to work with both.
 
 <section id="sotd">
 
-This document is a Draft Finding of the [Technical Architecture Group (TAG)](https://www.w3.org/2001/tag/)
-which we are releasing as a Draft Note. The intent is for this document to become a W3C Statement.
+The intent is for this document to become a W3C Statement.
 It was prepared by the [Web Privacy Principles Task Force](https://github.com/w3ctag/privacy-principles),
-which was convened by the TAG. Publication as a Draft Finding or Draft Note does not imply
-endorsement by the TAG or by the W3C Membership.
-
-The substance of this draft reflects the consensus of the TAG, but it is subject to ongoing
-editorial work and restructuring. Please bear this in mind when citing or linking
-to this document, as section numbers and headings may change.
+which was convened by the TAG.
 
 This document is considered stable by the TAG and is ready for wide review.
 
