Change of affiliation

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       format: 'markdown',
       editors: [{
         name: 'Robin Berjon',
-        company: 'Protocol Labs',
-        companyURL: 'https://protocol.ai/',
+        company: 'Supramundane',
+        companyURL: 'https://supramundane.agency/',
         url: 'https://berjon.com/',
         note: 'The New York Times until Sep 2022',
         w3cid: 34327,
