--- a/index.html
+++ b/index.html
@@ -1292,10 +1292,11 @@ the data exposed, is to autogenerate a new email address for each context.
 
 ### Ancillary uses
 
-[=Sites=] sometimes use data in ways that aren't needed for the user's immediate
+[=Sites=] sometimes use data in ways that aren't needed for the user's primary
 goals. For example, they might bill advertisers, measure site performance, or
-tell developers about bugs. These uses are known as <dfn data-lt="ancillary
-use">ancillary uses</dfn>.
+tell developers about bugs. These uses, which provide indirect support for,
+but are not inherent in, the user's primary goals, are known as
+<dfn data-lt="ancillary use">ancillary uses</dfn>.
 
 [=Sites=] can get the data they want for [=ancillary uses=] from a variety of places:
 
