--- a/index.html
+++ b/index.html
@@ -2081,7 +2081,7 @@ or even used to manipulate behaviour and thus reduce [=autonomy=].
 </div>
 
 People should be free to limit the amount of private information they share,
-to request that an actor limit the uses of data already shared,
+to request that an [=actor=] limit the uses of data already shared,
 or that data be deleted.
 When a person chooses to deny or withdraw their permission to use their data,
 retaliation is inappropriate.
