--- a/index.html
+++ b/index.html
@@ -2082,14 +2082,14 @@ or even used to manipulate behaviour and thus reduce [=autonomy=].
 
 People should be free to limit the amount of private information they share,
 to request that an [=actor=] limit the uses of data already shared,
-or that data be deleted.
-When a person chooses to deny or withdraw their permission to use their data,
+or that [=data=] be deleted.
+When a [=person=] chooses to deny or withdraw their permission to use their [=data=],
 retaliation is inappropriate.
 
 It is not retaliation to terminate a service
-when data that is essential to the operation of a service is withheld.
-However, it might be retaliation if withholding data
-results in actions unrelated to the use of that data.
+when [=data=] that is essential to the operation of a service is withheld.
+However, it might be retaliation if withholding [=data=]
+results in actions unrelated to the use of that [=data=].
 Examples of retaliatory behavior include:
 
 * making the process of withdrawing consent more onerous than granting it;
