--- a/index.html
+++ b/index.html
@@ -1294,8 +1294,17 @@ the data exposed, is to autogenerate a new email address for each context.
 
 [=Sites=] sometimes use data in ways that aren't needed for the user's immediate
 goals. For example, they might bill advertisers, measure site performance, or
-tell developers about bugs. These uses are known as <dfn data-lt="ancillary
-use">ancillary uses</dfn>.
+tell developers about bugs.
+These are examples of [=ancillary use=] of [=data=].
+
+An <dfn>ancillary use</dfn> is any case where [=data processing=]
+provides direct benefit only to [=actors=]
+other than the [=person=] who is the subject of that [=data=].
+Ancillary uses of [=personal data=] might provide benefit that [=person=],
+but any benefit is indirect.
+For example, being able to charge advertisers provides benefit in that
+the site can sustain its business and remain available for future interactions,
+but this benefit is primarily realized by the site's owners.
 
 [=Sites=] can get the data they want for [=ancillary uses=] from a variety of places:
 
