--- a/index.html
+++ b/index.html
@@ -1300,7 +1300,7 @@ These are examples of [=ancillary use=] of [=data=].
 An <dfn>ancillary use</dfn> is any case where [=data processing=]
 provides direct benefit only to [=actors=]
 other than the [=person=] who is the subject of that [=data=].
-Ancillary uses of [=personal data=] might provide benefit that [=person=],
+Ancillary uses of [=personal data=] might provide benefit to that [=person=],
 but any benefit is indirect.
 For example, being able to charge advertisers provides benefit in that
 the site can sustain its business and remain available for future interactions,
