Replace "only" benefit with "primary" benefit.
Co-authored-by: Tantek Çelik <46418+tantek@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1298,7 +1298,7 @@ tell developers about bugs.
 These are examples of [=ancillary use=] of [=data=].
 
 An <dfn>ancillary use</dfn> is any case where [=data processing=]
-provides direct benefit only to [=actors=]
+provides direct benefit primarily to [=actors=]
 other than the [=person=] who is the subject of that [=data=].
 Ancillary uses of [=personal data=] might provide benefit to that [=person=],
 but any benefit is indirect.
